# fh6-road-scout

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  horizon_scout.spec  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  release.yml
app/core/: calibration_landmarks.py  calibrator.py  detector.py  discovery_scanner.py  exporter.py  fast_travel_detector.py  raster_scanner.py  road_cursor_detector.py  road_mapper.py  road_sampler.py  scanner.py  session_store.py
app/models/: scan_result.py
app/ui/: calibration.py  calibration_wizard.py  ft_wizard.py  main_window.py  map_view.py  scan_panel.py  theme.py
app/utils/: logging_setup.py  map_coords.py  paths.py  windows.py
assets/: README.txt  road_points.json  world_road_points.json
assets/game_files/: Brio_00.oww  Route101.owt  build_world_road_points.py  generate_calib_guide.py  generate_road_map.py  parse_owt.py  route0.nt
github-issues/: create-issues.ps1
github-issues/phase-1-scaffold-ui-shell/: P1-S1-dev-tooling.md  P1-S2-data-models.md  P1-S3-map-view-widget.md  P1-S4-scan-panel.md  P1-S5-main-window-wiring.md  P1-S6-dark-theme.md
github-issues/phase-2-road-sampler/: P2-S1-road-mask.md  P2-S2-skeletonize.md  P2-S3-sample-skeleton.md  P2-S4-configurable-interval.md
github-issues/phase-3-calibration/: P3-S1-calibrator-fit.md  P3-S2-calibrator-transform.md  P3-S3-calibrator-serialise.md  P3-S4-calibration-wizard-phase1.md  P3-S5-calibration-wizard-phase2.md
github-issues/phase-4-scanner-engine/: P4-S4-pause-resume-stop.md  (+4 more)
tests/: test_imports.py
(+32 files in other folders)
